obeddir="$(top_srcdir)/release"
obed_PROGRAMS = obeditor
obeditor_SOURCES = \
	\
	CHistory.h \
	CHistory.cpp \
	common__ob_object.h \
	common__ob_object.cpp \
	\
	entity__wListFrames.h \
	entity__wListFrames.cpp \
	entity__panel_anims.cpp \
	entity__MyAnimationZone.h \
	entity__MyAnimationZone.cpp \
	entity__PanelWithAnims.cpp \
	entity__MainFrame.cpp \
	\
	entity__edit_entity_enums.h \
	entity__edit_entity.h \
	entity__panel_errors.cpp \
	entity__panel_overview.cpp \
	entity__panel_platform.cpp \
	entity__panel_remaps.cpp \
	entity__sdlSound.cpp \
	entity__wListAnims.h \
	entity__wListAnims.cpp \
	\
	common__object_levels.cpp \
	common__object_stage.h \
	common__object_stage.cpp \
	common__object_file.h \
	common__object_file.cpp \
	common__parsing.cpp \
	common__prListBox.h \
	common__prListBox.cpp \
	common__tools.h common__tools.cpp \
	common__wxFrameImage.h \
	common__wxFrameImage.cpp \
	common__validators.h \
	common__validators.cpp \
	common__ob_controls.h \
	common__ob_controls.cpp \
	common__globals.h \
	common__mod.h \
	common__mod.cpp \
	common__modalsFrames.h \
	common__modalsFrames.cpp \
	\
	myControls.h   \
	myControls.cpp \
	\
	levels__Ob_GObjects.h \
	levels__Ob_GObjects.cpp \
	levels__ObImgs_Manager.h \
	levels__ObImgs_Manager.cpp \
	levels__CtrlStageView.h \
	levels__CtrlStageView.cpp \
	levels__Panel_StageView.h \
	levels__Panel_StageView.cpp \
	levels__GUI_Objects.cpp \
	levels__main.cpp \
	levels__sidesWindows.h \
	levels__sidesWindows.cpp \
	levels__Ctrl_SceneView.h	\
	levels__Ctrl_SceneView.cpp	\
	levels__wndEditPanelOrder.cpp \
	levels__wndEditBackground.h 	\
	levels__wndEditBackground.cpp \
	levels__wndEditFrontPanels.h 	\
	levels__wndEditFrontPanels.cpp \
	levels__classes.h \
	levels__globals.h \
	\
	ob_editor.h \
	ob_editor.cpp \
	\
	images__gifFile.cpp \
	images__gifFile.h \
	images__imgFile.h \
	images__MyPalette.cpp \
	images__MyPalette.h \
	images__png.h \
	images__pngFile.cpp \
	images__pngFile.h

	